# game-react-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  技术方案.md
.claude/: settings.local.json
config/: default.yaml  logging.yaml  xttc_poco.yaml
data/: graph.db  nav_memory.json  page_cache.json
scripts/: current_page_hash.py  explore_cold_start.py  localize_history.py  manual_explore.py  run_agent.py
src/game_agent/: __init__.py  config.py  exceptions.py  logging_setup.py  types.py
src/game_agent/cognition/: __init__.py  context.py  gemini_client.py  navigation_memory.py  page_cache.py  prompts.py  react_loop.py  vision_client.py
src/game_agent/device/: __init__.py  airtest_device.py  base.py  mock_device.py
src/game_agent/graph/: __init__.py  annotator.py  explorer.py  hasher.py  models.py  navigator.py  storage.py
src/game_agent/perception/: __init__.py  base.py  occlusion.py  poco_tree.py  provider.py  screenshot.py  state.py  ui_diff.py  ui_tree_store.py
src/game_agent/tools/: atomic.py  (+4 more)
tests/: conftest.py
tests/fixtures/: sample_graph.json  sample_poco_tree.json
tests/test_cognition/: test_context.py  test_llm_logging.py  test_persistence_sync.py  test_react_loop_fast_path.py
tests/test_device/: test_airtest_device.py  test_mock_device.py
tests/test_graph/: test_hasher.py  test_models.py  test_navigator.py  test_storage.py
tests/test_perception/: test_occlusion.py  test_poco_tree.py  test_ui_diff.py  test_ui_tree_store.py
tests/test_tools/: test_atomic.py  test_registry.py  test_smart_click.py
