[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-react-agent"
version = "0.1.0"
description = "ReAct-based game automation testing agent"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.0",
    "google-genai>=1.0.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24,<2",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
device = [
    "airtest>=1.3.0",
    "pocoui>=1.0.90",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that require real external services (Gemini API, device)",
]

[tool.ruff]
target-version = "py311"
line-length = 100
